--- a/sql/pom.xml
+++ b/sql/pom.xml
@@ -33,7 +33,7 @@
   <dependency>
    <groupId>com.developmentontheedge</groupId>
    <artifactId>xmltest</artifactId>
-   <version>0.0.2-SNAPSHOT</version>
+   <version>0.2.1</version>
    <scope>test</scope>
   </dependency>
 
