--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
  <packaging>pom</packaging>
  <url>http://developmentontheedge.com/</url>
 
+ <modules>
+  <module>dbms</module>
+  <module>sql</module>
+  <module>freemarker-patched</module>
+  <module>metadata</module>
+  <module>server</module>
+ </modules>
+
  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
