--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -52,6 +52,12 @@
 			<version>1.11</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.jcs</groupId>
+			<artifactId>jcs</artifactId>
+			<version>1.3</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
