--- a/server/pom.xml
+++ b/server/pom.xml
@@ -90,6 +90,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.eclipse.platform</groupId>
+			<artifactId>org.eclipse.equinox.launcher</artifactId>
+			<version>1.3.201</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>org.eclipse.core.runtime</artifactId>
 			<version>3.7.0</version>
