--- a/server/src/test/resources/app/src/connectionProfiles.local.yaml
+++ b/server/src/test/resources/app/src/connectionProfiles.local.yaml
@@ -8,3 +8,7 @@ connectionProfiles:
       tomcatManagerReloadUrlTemplate: http://localhost:8080/manager/text/reload?path=/{projectName}
       properties:
       - PROJECT_SOURCE: direct
+    test:
+      connectionUrl: jdbc:h2:~/testBe5
+      username: sa
+      password:
