--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
  <packaging>pom</packaging>
  <url>http://developmentontheedge.com/</url>
 
- <!--modules>
+ <modules>
   <module>dbms</module>
   <module>sql</module>
   <module>freemarker-patched</module>
   <module>metadata</module>
   <module>server</module>
- </modules-->
+  <module>mojo</module>
+ </modules>
 
  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
