--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-	<name>mojo</name>
+	<name>be5-maven</name>
 	<description>Maven plug-ins for be5</description>
 
 	<!--parent>
