--- a/modules/core/src/meta/entities/classifications.yaml
+++ b/modules/core/src/meta/entities/classifications.yaml
@@ -20,7 +20,10 @@ classifications:
         type: KEYTYPE
         canBeNull: true
         extras: module:attributes
-        reference: import.ID
+        reference:
+          to: import.ID
+          view: '*** Selection view ***'
+          extras: module:attributes
     - whoInserted___:
         type: VARCHAR(100)
         canBeNull: true
@@ -38,7 +41,7 @@ classifications:
         - recordID
   queries:
   - All records:
-      type: 1D
+      type: D1
       operations:
       - Clone
       - Delete
@@ -46,7 +49,7 @@ classifications:
       - Explain Plan
       - Filter
       - Insert
-      code: |
+      code: |-
         SELECT
 
          CONCAT( '{{{',e.displayName ,'}}}: ' ,
@@ -76,4 +79,3 @@ classifications:
             ,entities e
          WHERE cl.categoryID = cat.ID
             AND cl.recordID LIKE CONCAT( e.name,'.%'                      )
-  operations: []
