--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -45,10 +45,17 @@
 			<version>0.1.0</version>
 		</dependency>
 
+		<!-- temp: for testing -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.developmentontheedge.be5.modules</groupId>
+			<artifactId>core</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 
 	</dependencies>
