--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -2,23 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.developmentontheedge.be5.modules</groupId>
+	<groupId>com.developmentontheedge.be5.modules</groupId>
 	<artifactId>core</artifactId>
 	<version>0.1.0</version>
-    <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<name>be5-modules-core</name>
 	<description>Core database module for be5 applications</description>
 
-	<!--parent>
-		<groupId>com.developmentontheedge</groupId>
-		<artifactId>be5</artifactId>
-		<version>0.0.2</version>
-	</parent-->
+	<!--parent> <groupId>com.developmentontheedge</groupId> <artifactId>be5</artifactId> 
+		<version>0.0.2</version> </parent -->
 
 	<dependencies>
 
@@ -30,21 +27,30 @@
 
 	</dependencies>
 
-  <build>
+	<build>
 
-   
-    <plugins>
+		<sourceDirectory>src/java</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>${basedir}</directory>
+				<excludes>
+					<exclude>.*</exclude>
+    				<exclude>src/java/**/*.*</exclude>
+				</excludes>
+			</resource>
+		</resources>
 
-      <plugin>
-        <groupId>com.developmentontheedge.be5</groupId>
-        <artifactId>be5-maven-plugin</artifactId>
-        <version>0.1.0</version>
-        <configuration>
-            <projectPath>./</projectPath>
-        </configuration>
-      </plugin>
+		<plugins>
+			<plugin>
+				<groupId>com.developmentontheedge.be5</groupId>
+				<artifactId>be5-maven-plugin</artifactId>
+				<version>0.1.0</version>
+				<configuration>
+					<projectPath>./</projectPath>
+				</configuration>
+			</plugin>
 
-    </plugins>
-  </build>
+		</plugins>
+	</build>
 
 </project>
