--- a/server/pom.xml
+++ b/server/pom.xml
@@ -36,12 +36,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mozilla</groupId>
-			<artifactId>rhino</artifactId>
-			<version>1.7R3</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.5</version>
@@ -93,6 +87,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.193</version>
+    		<scope>test</scope>
 		</dependency>
 
 		<dependency>
