remove component 'login' from server 'config.yaml' Applications must define it in their configuration. Component redefine forbidden.

--- a/server/src/test/resources/app/context.yaml
+++ b/server/src/test/resources/app/context.yaml
@@ -1,5 +1,4 @@
 context:
   components:
-  - login:
-      class: com.developmentontheedge.be5.components.Login
-      version: 2
+  - login: com.developmentontheedge.be5.components.Login
+
