--- a/server/context.yaml
+++ b/server/context.yaml
@@ -31,4 +31,6 @@ context:
   - executorService:
       interface: com.developmentontheedge.be5.api.services.ExecutorService
       implementation: com.developmentontheedge.be5.api.services.impl.ExecutorServiceImpl
-
+  - logger:
+      interface: com.developmentontheedge.be5.api.services.Logger
+      implementation: com.developmentontheedge.be5.api.services.impl.LoggerImpl
