move config to 'context.yaml' file

--- a/server/src/test/resources/app/context.yaml
+++ b/server/src/test/resources/app/context.yaml
@@ -1,4 +1,7 @@
 context:
   components:
   - login: com.developmentontheedge.be5.components.Login
-
+config:
+  services:
+    logger:
+      path: '/logging.properties'
