--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -2,6 +2,7 @@ _system_:
   type: table
   displayName: System
   primaryKey: _dummy_
+  queries:
   - Pool:
       type: static
       roles: SystemDeveloper
