--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -79,8 +79,18 @@
 				<artifactId>maven-plugin-plugin</artifactId>
 				<version>3.5</version>
 				<configuration>
-					<mojoDependencies></mojoDependencies>
+					<!-- see http://jira.codehaus.org/browse/MNG-5346 -->
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
+
+				<executions>
+					<execution>
+						<id>mojo-descriptor</id>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
