--- a/server/pom.xml
+++ b/server/pom.xml
@@ -117,8 +117,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.developmentontheedge</groupId>
-			<artifactId>be5-module-core</artifactId>
+			<groupId>com.developmentontheedge.be5.modules</groupId>
+			<artifactId>be5-modules-core</artifactId>
 			<version>0.1.0</version>
 			<scope>test</scope>
 		</dependency>
