--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -61,7 +61,7 @@ users:
           u.registrationDate,
           u.status,
           u.blockingReason,
-          u.comments,
+          u.comments
         FROM users u
   - Login:
       type: static
