--- a/modules/core/src/meta/entities/_logout_.yaml
+++ b/modules/core/src/meta/entities/_logout_.yaml
@@ -5,6 +5,6 @@ _logout_:
   primaryKey: dummy
   queries:
   - All records:
-      type: static
+      type: STATIC
       roles: '@AllRolesExceptGuest'
-      value: logout
+      code: logout
