--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -4,6 +4,6 @@ _system_:
   primaryKey: _dummy_
   queries:
   - Pool:
-      type: static
+      type: STATIC
       roles: Administrator
-      value: pool
+      code: pool
