add QueryType toString() -> name, for remove caps

--- a/modules/core/src/meta/entities/_logout_.yaml
+++ b/modules/core/src/meta/entities/_logout_.yaml
@@ -5,6 +5,6 @@ _logout_:
   primaryKey: dummy
   queries:
   - All records:
-      type: STATIC
+      type: static
       roles: '@AllRolesExceptGuest'
       value: logout
