fix style project name

--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -6,17 +6,13 @@
 	<artifactId>be5-maven-plugin</artifactId>
 	<version>0.1.0</version>
 	<packaging>maven-plugin</packaging>
-	<!--packaging>jar</packaging -->
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<name>be5-maven-plugin</name>
+	<name>be5 maven plugin</name>
 	<description>Maven plug-ins for be5</description>
-
-	<!--parent> <groupId>com.developmentontheedge</groupId> <artifactId>be5</artifactId> 
-		<version>0.0.2</version> </parent -->
 
 	<dependencies>
 
@@ -43,13 +39,6 @@
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>dbms</artifactId>
 			<version>0.1.0</version>
-		</dependency>
-
-		<!-- temp: for testing -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.0.0</version>
 		</dependency>
 
 	</dependencies>
