--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -14,10 +14,14 @@ testtable:
     - value:
         type: VARCHAR(30)
   queries:
-  - Test 1D unknown:
-      type: 1D_unknown
-      operations: [Insert, Edit, Delete]
-      roles: [Guest, Administrator]
+  - Test 1D:
+      type: 1D
+      roles: Administrator
+      operations:
+      - Add
+      - Delete
+      - Edit
+      - Insert
       code: |2-
             SELECT
               t.ID AS "___ID",
@@ -25,10 +29,9 @@ testtable:
               t.value AS "Value"
             FROM
               testtable t
-  - Test 1D:
-      type: 1D
-      operations: [Insert, Edit, Delete, Add]
-      roles: [Administrator]
+  - Test 1D unknown:
+      type: 1D_unknown
+      roles: [Administrator, Guest]
       code: |2-
             SELECT
               t.ID AS "___ID",
@@ -37,20 +40,20 @@ testtable:
             FROM
               testtable t
   operations:
-  - Send password:
-      code: com.beanexplorer.enterprise.operations.SendPassword
+  - Add:
+      type: JavaScript/server
+      roles: Administrator
+      file: test.js
   - Delete:
       records: 2
-      roles: [Administrator]
+      roles: Administrator
       code: com.beanexplorer.enterprise.operations.SilentDeleteOperation
   - Edit:
       records: 2
-      roles: [Administrator]
+      roles: Administrator
       code: com.beanexplorer.enterprise.operations.SilentEditOperation
   - Insert:
-      roles: [Administrator]
+      roles: Administrator
       code: com.beanexplorer.enterprise.operations.SilentInsertOperation
-  - Add:
-      type: JavaScript/server
-      roles: [Administrator]
-      file: test.js
+  - Send password:
+      code: com.beanexplorer.enterprise.operations.SendPassword
