--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -5,14 +5,30 @@
 	<groupId>com.developmentontheedge.be5.modules</groupId>
 	<artifactId>be5-modules-core</artifactId>
 	<version>0.1.0</version>
-	<packaging>jar</packaging>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<name>be5 modules core</name>
 	<description>Core database module for be5 applications</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.developmentontheedge</groupId>
+			<artifactId>be5-server</artifactId>
+			<version>0.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<resources>
