--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,28 @@
     </configuration>
    </plugin>
   </plugins>
+  <pluginManagement>
+   <plugins>
+    <plugin>
+     <groupId>org.jacoco</groupId>
+     <artifactId>jacoco-maven-plugin</artifactId>
+     <version>0.7.9</version>
+     <executions>
+      <execution>
+       <id>prepare-agent</id>
+       <goals>
+        <goal>prepare-agent</goal>
+       </goals>
+      </execution>
+     </executions>
+    </plugin>
+    <plugin>
+     <groupId>org.eluder.coveralls</groupId>
+     <artifactId>coveralls-maven-plugin</artifactId>
+     <version>4.3.0</version>
+    </plugin>
+   </plugins>
+  </pluginManagement>
+
  </build>
 </project>
