add tests, refactoring

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -3,4 +3,8 @@ testProject:
   l10n: ru
   projectFileStructure: {}
   modules: []
-  application: testtable
+  application:
+  - canBeMovedToRoot
+  - testtable
+  - testtUser
+  - testtUser2
