rename test project tables

--- a/server/src/test/resources/project.yaml
+++ b/server/src/test/resources/project.yaml
@@ -4,7 +4,7 @@ testProject:
   projectFileStructure: {}
   modules: []
   application:
-  - canBeMovedToRoot
   - testtable
+  - testtableAdmin
   - testtUser
   - testtUser2
