fix core tests, create all entity in module on H2 database

--- a/modules/core/src/meta/entities/categories.yaml
+++ b/modules/core/src/meta/entities/categories.yaml
@@ -15,7 +15,7 @@ categories:
         type: VARCHAR(100)
         canBeNull: true
     - name:
-        type: TEXT
+        type: VARCHAR(1000)
     - parentID:
         type: KEYTYPE
         canBeNull: true
