--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ after_success:
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test org.jacoco:jacoco-maven-plugin:report org.eluder.coveralls:coveralls-maven-plugin:report
 jdk:
   - oraclejdk8
+notifications:
+  email: false
