fixes, be5:validate save

--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -42,6 +42,10 @@ users:
     - comments:
         type: VARCHAR(255)
         canBeNull: true
+    indices:
+    - IDX_USER_EMAIL:
+        columns:
+        - emailAddress
   queries:
   - '*** Selection view ***':
       code: |-
