--- a/server/context.yaml
+++ b/server/context.yaml
@@ -25,9 +25,9 @@ context:
   - sqlService:
       interface:      com.developmentontheedge.be5.api.services.SqlService
       implementation: com.developmentontheedge.be5.api.services.impl.SqlServiceImpl
-  - dpsStreamer:
-      interface:      com.developmentontheedge.be5.api.services.DpsStreamer
-      implementation: com.developmentontheedge.be5.api.services.impl.DpsStreamerImpl
+  - dpsExecutor:
+      interface:      com.developmentontheedge.be5.api.services.DpsExecutor
+      implementation: com.developmentontheedge.be5.api.services.impl.DpsExecutorImpl
   - executorService:
       interface:      com.developmentontheedge.be5.api.services.ExecutorService
       implementation: com.developmentontheedge.be5.api.services.impl.ExecutorServiceImpl
